finished coding section 3.15, docs not coming up as expected

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+    implementation 'org.springdoc:springdoc-openapi-kotlin:1.6.6'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
